# daily_report_checker

./: .gitignore  README.md  config.env  memo.py  pyproject.toml
app/: main.py
app/util/: logger.py
input/: 日報_北嶋直也.xlsx  日報_山田翔太 (7).xlsx
output/: 日報_抽出_202404_202502.xlsx
