[tool.poetry]
name = "daily-report-checker"
version = "0.1.0"
description = ""
authors = ["s.yamada <s.yamada@miracleave.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.13.1"
openpyxl = "^3.1.5"
pywin32 = "^308"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
